# Game_Design_Group_4_Project

./: .gitignore  1tghhohj.hn3.txt  CMakeLists.txt  README.txt  game.conf  notes.txt  roy.sh
include/: allComponents.h  audioSystem.h  collisionDetection.h  component.h  config.h  constants.h  controllableComponent.h  entity.h  entityCreator.h  entityCreator.h~  entityManager.h  gameState.h  global.h  graphicsComponent.h  graphicsSystem.h  inputSystem.h  levelCreator.h  logicSystem.h  moveableComponent.h  nonPlaying.h  prefabs.h  resourceManager.h  textureLoader.h  typeConversion.h
include/components/: blockMovementComponent.h  blockVisionComponent.h  collidableComponent.h  component.h  controllableComponent.h  enemyComponent.h  graphicsComponent.h  inventoryComponent.h  moveableComponent.h  platformingComponent.h  textComponent.h  timerComponent.h  trapComponent.h  visionComponent.h
resources/: Thumbs.db
resources/levels/: level_01.xml  level_02.xml  level_03.xml  level_04.xml  level_05.xml  level_06.xml  level_07.xml  level_08.xml  level_09.xml  level_Dino.xml  level_Lava.xml  level_bond.xml  level_space.xml  level_spiders.xml  level_sumo.xml
src/: audioSystem.cpp  collisionDetection.cpp  config.cpp  controllableComponent.cpp  entity.cpp  entityCreator.cpp  entityCreator.cpp~  entiyManager.cpp  global.cpp  graphicsComponent.cpp  graphicsSystem.cpp  graphicsSystem.cpp~  inputSystem.cpp  levelCreator.cpp  levelCreator.cpp~  logicSystem.cpp  nonPlaying.cpp  prefabs.cpp  resourceManager.cpp  textureLoader.cpp  typeConversion.cpp
src/components/: blockMovementComponent.cpp  (+10 more)
(+2 files in other folders)
